--- a/location.html
+++ b/location.html
@@ -120,14 +120,14 @@
                     </div>
                 </div>
                 <div class="methode">
-                    <input type="radio" id="radio-pp" name="radio" class="radio" disabled>
+                    <input type="radio" id="radio-pp" name="radio" class="radio">
                     <label for="radio-pp" class="radiolabel font-600">
                         <span>Paypal</span>
                         <img src="./assets/icon_paypal.svg" alt="paypal">
                     </label>
                 </div>
                 <div class="methode">
-                    <input type="radio" id="radio-btc" name="radio" class="radio" disabled>
+                    <input type="radio" id="radio-btc" name="radio" class="radio">
                     <label for="radio-btc" class="radiolabel font-600">
                         <span>Bitcoin</span>
                         <img src="./assets/icon_bitcoin.svg" alt="bitcoin">
