--- a/location.html
+++ b/location.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/location.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/location.css">
     <title>Voitureagogo - location</title>
 </head>
 <body>
@@ -97,9 +97,9 @@
                 <div class="methode">
                     <input type="radio" id="radio-cb" name="radio" class="radio" required>
                     <label for="radio-cb" class="radiolabel font-600">
-                        <span>Carte de crédit</span>
-                        <img src="./assets/icon_visa.svg" alt="visa">
+                        Carte de crédit
                     </label>
+                    <img src="./assets/icon_visa.svg" alt="visa" class="logo">
                     <div class="questions">
                         <label class="font-600">
                             <span>Numéro de carte</span>
@@ -123,15 +123,15 @@
                     <input type="radio" id="radio-pp" name="radio" class="radio">
                     <label for="radio-pp" class="radiolabel font-600">
                         <span>Paypal</span>
-                        <img src="./assets/icon_paypal.svg" alt="paypal">
                     </label>
+                    <img src="./assets/icon_paypal.svg" alt="paypal" class="logo">
                 </div>
                 <div class="methode">
                     <input type="radio" id="radio-btc" name="radio" class="radio">
                     <label for="radio-btc" class="radiolabel font-600">
                         <span>Bitcoin</span>
-                        <img src="./assets/icon_bitcoin.svg" alt="bitcoin">
                     </label>
+                    <img src="./assets/icon_bitcoin.svg" alt="bitcoin" class="logo">
                 </div>
             </div>
             <div class="container confirm">
